--- a/index.html
+++ b/index.html
@@ -3,8 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css" />
+    <!-- <style>
+       #demo{
+            font-size:50px;
+            color:red;
+            font-family:cursive;
+            }
+        .content{
+            font-size:50px;
+            color:red;
+            font-family:cursive;
+        }
+    </style>-->
 </head>
 <body>
-
+    <!--<p id="demo">some content</p>
+    <p class="content">some content</p>
+    <p class="content">some content</p>
+    <p style="color:red; font-size: 60px;">some content</p>-->
+    <!--<div class="box-one">some content</div>
+    <div class="box-two"></div>-->
+    <div class="col-1" style="height:200px" "border=1px solid></div>
 </body>
 </html>
